--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,16 +4,8 @@
   "deno.unstable": true,
   "deno.importMap": "./import_map.json",
   "deno.codeLens.test": true,
-  "deno.suggest.autoImports": true,
-  "deno.suggest.imports.autoDiscover": true,
-  "deno.suggest.names": true,
-  "deno.testing.args": [
+  "deno.codeLens.testArgs": [
     "--allow-all",
-    "--no-check",
-    "--unstable"
-  ],
-  "files.watcherExclude": {
-    "**/target": true
-  },
-  "editor.snippetSuggestions": "bottom"
+    "--no-check"
+  ]
 }
