--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
   "deno.enable": true,
-  "deno.config": "./deno.jsonc",
-  "deno.importMap": "./import_map.json"
+  "deno.config": "./deno.jsonc"
 }
