--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,15 +1,18 @@
 {
   "metadata": {
-    "minDenoVersion": "1.26",
+    "minDenoVersion": "1.30",
     "name": "konfig",
     "version": "1.0.0"
   },
   "compilerOptions": {
     "allowJs": true,
     "lib": ["deno.window", "deno.unstable"],
-    "strict": false
+    "strict": true
   },
   "lint": {
+    "rules": {
+      "exclude": ["no-explicit-any", "ban-types"]
+    },
     "files": {
       "exclude": ["vendor"]
     }
@@ -18,6 +21,11 @@
     "files": {
       "exclude": ["vendor"]
     }
+  },
+  "imports": {
+    "konfig": "./mod.ts",
+    "fun/": "https://deno.land/x/fun@v2.0.0-alpha.10/",
+    "std/": "https://deno.land/std@0.174.0/"
   },
   "importMap": "./vendor/import_map.json",
   "tasks": {
